--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@ Australian journalist in Washington DC. U.S. State Department correspondent for 
 <h2>Recent articles</h2>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/biden-chips-act-11042022165531.html">Biden: U.S. chip subsidies are key for national security</a> (Nov. 4, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a> (Oct. 31, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a> (Oct. 26, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise to power</a> (Oct. 21, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/china/china-taiwan-10202022142800.html">US Navy chief: Can’t rule out Taiwan invasion by 2023</a> (Oct. 20, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a> (Oct. 18, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. industry could take ‘years’ to catch up</a> (Oct. 14, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a> (Oct. 12, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a> (Oct. 4, 2022)</li>
-<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">Blinken: US, Pacific island states agree to ‘declaration of partnership’</a> (Sept. 28, 2022)</li>
+<li><a href="https://www.rfa.org/english/news/cambodia/asean-summit-10312022163441.html">Biden to visit Cambodia for dual summits</a> (Oct. 31)</li>
+<li><a href="https://www.rfa.org/english/news/cambodia/ruleoflaw-report-10252022173548.html">Asia gets mixed marks amid ‘global rule of law recession’</a> (Oct. 26)</li>
+<li><a href="https://www.rfa.org/english/news/cambodia/biopic-10212022134351.html">Navel-gazing biopic shuns Hun Sen’s revolutionary rise to power</a> (Oct. 21)</li>
+<li><a href="https://www.rfa.org/english/news/china/china-taiwan-10202022142800.html">US Navy chief: Can’t rule out Taiwan invasion by 2023</a> (Oct. 20)</li>
+<li><a href="https://www.rfa.org/english/news/china/blinken-taiwan-10182022151451.html">Blinken: China speeding up plans for takeover of Taiwan</a> (Oct. 18)</li>
+<li><a href="https://www.rfa.org/english/news/china/usa-chips-10142022154807.html">Even with CHIPS Act, U.S. industry could take ‘years’ to catch up</a> (Oct. 14)</li>
+<li><a href="https://www.rfa.org/english/news/china/us-china-security-10122022154022.html">Biden: Next decade will be ‘decisive’ for rivalry with China</a> (Oct. 12)</li>
+<li><a href="https://www.rfa.org/english/news/korea/missile-reaction-10042022170353.html">UN response to North Korea’s missiles will test its ‘relevance,’ South says</a> (Oct. 4)</li>
+<li><a href="https://www.rfa.org/english/news/china/declaration-09282022185411.html">Blinken: US, Pacific island states agree to ‘declaration of partnership’</a> (Sept. 28)</li>
 </ul> 
 
 <h2>Selected articles</h2>  
@@ -114,7 +114,7 @@ Australian journalist in Washington DC. U.S. State Department correspondent for 
   <div id="photos">
     <h2>Photographs</h2>
 
-      <img src="https://i.imgur.com/RYeyWPt.jpg"><p><b>April 2015</b> Sam Rainsy and Hun Sen attend new year celebrations in Siem Reap province, at the height of their <a href="https://www.cambodiadaily.com/archives/in-old-enemy-hun-sen-sam-rainsy-sees-hope-82211/">short-lived detente awkwardly titled &ldquo;the culture of dialogue.&rdquo;</a> Many believed Hun Sen was only interested in staving off intense pressure against him... until he could strike back&nbsp;&mdash;&nbsp;and <a href="https://www.cambodiadaily.com/news/recent-arrests-disrupt-charade-of-political-truce-91883/">the following year he was once again ordering the arrest</a> and <a href="https://www.cambodiadaily.com/news/prisons-filling-with-critics-of-ruling-party-112115/">jailing of activists and opposition lawmakers.</a></p>
+      <img src="https://i.imgur.com/RYeyWPt.jpg"><p><b>April 2015</b> Sam Rainsy and Hun Sen attend new year celebrations in Siem Reap province, at the height of their <a href="https://www.cambodiadaily.com/archives/in-old-enemy-hun-sen-sam-rainsy-sees-hope-82211/">short-lived detente awkwardly titled &ldquo;the culture of dialogue.&rdquo;</a> Many believed Hun Sen was only interested in staving off intense pressure against him... until he could strike back&nbsp;&mdash;&nbsp;and <a href="https://www.cambodiadaily.com/news/recent-arrests-disrupt-charade-of-political-truce-91883/">the following year he was again ordering the arrest</a> and <a href="https://www.cambodiadaily.com/news/prisons-filling-with-critics-of-ruling-party-112115/">jailing of activists and opposition lawmakers.</a></p>
 
       <img src="https://i.imgur.com/tD3PV34.jpg"><p><b>January 2014</b> As Hun Sen watches on, Vietnam's then-Prime Minister Nguyen Tan Dung presses button to lay down <a href="https://www.cambodiadaily.com/archives/hun-sen-says-hes-here-to-stay-higher-wages-must-wait-50575/">the first pillar of a bridge to link Cambodia to Vietnam in Svay Ring province</a>. Vietnam installed Hun Sen in power in 1985, and the premier is a fluent speaker of Vietnamese. This has led opponents to depict him as a servant of Cambodia's historical enemy &mdash; but he has said Cambodia should be grateful to Vietnam for ousting Pol Pot, and his party has <a href="https://www.cambodiadaily.com/news/kem-sokha-says-theres-no-racism-in-cambodia-95426/">labelled the opposition as xenophobic</a>.</p>
 
