--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>FEBRUARY 2023</b></p>
 <ul>  
-<li><a href="https://rfa.org/english/news/china/spy-balloon-radar-02132023140428.html</a>Radar tweaks driving balloon finds, US officials say</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/spy-balloon-radar-02132023140428.html">Radar tweaks driving balloon finds, US officials say</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/ufo-02102023162022.html">US shoots down ‘high altitude object’ over Alaska</a></li>
 <li><a href="https://www.rfa.org/english/news/china/human-rights-penetrated-02092023142253.html">Sherman: China has ‘penetrated’ UN to declaw its oversight</a></li>
 <li><a href="https://www.rfa.org/english/news/china/state-union-biden-02072023151429.html">Biden: ‘We seek competition, not conflict’ with China</a></li>
